use native Java List.of